cmake_minimum_required(VERSION 3.10)
project(TelegramBackup)

set(TD_ENABLE_JNI OFF)
set(TD_ENABLE_DOTNET OFF)
set(TD_INSTALL_SHARED_LIBRARIES OFF)
add_subdirectory(td)
add_subdirectory(CLI11)
add_subdirectory(googletest)
add_compile_options(-Wall)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_library(telegrambackup src/TelegramBackup.cpp)
target_include_directories(telegrambackup PRIVATE include)
target_link_libraries(telegrambackup PUBLIC Td::TdStatic)
add_executable(tgbackup src/main.cpp)
target_include_directories(tgbackup PRIVATE include)
target_link_libraries(tgbackup PRIVATE CLI11::CLI11 telegrambackup)
add_subdirectory(tests)